# dockit

./: .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  README_zh.md  auto-import.d.ts  auto-imports.d.ts  codecov.yml  components.d.ts  components.json  eslint.config.js  forge.config.js  forge.config.ts  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  types.d.ts  uno.config.ts  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: CONTRIBUTION.md  bug_report.md  feature_request.md
.github/workflows/: node.yml  release.yml
.husky/: pre-commit
.omo/: ralph-loop.local.md
.omo/run-continuation/: ses_19718948affenEzaZTmKGmDTwm.json  ses_19cac730bffek1QI1u5ivrZi7W.json  ses_19ccd1e0effemkT0J71vr9cMIT.json
docs/: agent-reliability-issues-analysis.md  dockit-actions.md  easysearch-market-analysis-zh.md  index.md  monghoul-competitive-analysis.md  mongodb-compatible-databases-analysis.md  naive-ui-migration-guide.md  naive-ui-sass-audit.md  opencode-vs-dockit-architecture.md  opensearch-elasticsearch-market-analysis.md  prd-data-studio.md  privacy-policy.md  ssh-tunnel-architecture.md  theme-system.md  xinchuang-database-market-analysis.md
public/: dockit.icns
scripts/: build-pkg.sh  build-release-notes.sh  collect-binaries.sh  collect-updater-manifests.sh  make-distributions.sh  release.sh  run-tests.sh
src/: App.vue  bus.ts  electron.ts  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_adapters.rs  dynamo_client.rs  fetch_client.rs  file_api.rs  lib.rs  main.rs  menu.rs  mongo_client.rs  openai_client.rs  tests.rs
src-tauri/src/agent/: compact.rs  config.rs  conversation.rs  executor.rs  harness.rs  loop_runner.rs  loop_runner_support.rs  mod.rs  model_registry.rs  provider_adapter.rs  query_history.rs  schema.rs  session_store.rs  token_counter.rs  tool_executor.rs  tools.rs
src-tauri/src/agent/chat_formatter/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/capabilities/: commands.rs  dockit.rs  dynamo.rs  es.rs  mod.rs  mongo.rs  registry.rs  tests.rs  types.rs
src-tauri/src/common/: bson.rs  connection_resolver.rs  dynamo.rs  dynamodb_utils.rs  es.rs  format.rs  http_client.rs  json_utils.rs  mod.rs  mongo.rs  response.rs  ssh_bridge.rs  validation.rs
src-tauri/src/db/: mod.rs
src-tauri/src/dynamo/: batch_write_item.rs  cloudwatch_metrics.rs  continuous_backups.rs  create_item.rs  create_table.rs  delete_item.rs  delete_table.rs  describe_table.rs  execute_statement.rs  list_tables.rs  mod.rs  query_table.rs  scan_table.rs  time_to_live.rs  truncate_table.rs  types.rs  update_item.rs  update_pitr.rs  update_streams.rs  update_table.rs  update_table_config.rs  update_ttl.rs
src-tauri/src/ssh/: commands.rs  config.rs  mod.rs  ssh_config.rs  transport.rs  tunnel.rs
src-tauri/tests/: capabilities.rs
src/common/: asyncUtils.ts  base64.ts  connectQuery.ts  constants.ts  crypto.ts  csv.ts  customError.ts  debounceThrottle.ts  debug.ts  editor.ts  featureFlags.ts  httpClient.ts  index.ts  jsonify.ts  pureObject.ts  requestUtil.ts  retry.ts  searchLang.ts  searchTokensProvider.ts  shortcuts.ts  valueConversion.ts
src/components/: AboutDialog.vue  AppProvider.vue  MarkdownRender.vue  PathBreadcrumb.vue  RouterMain.vue  VersionDetect.vue  agent-message-bubble.vue  chat-panel.vue  context-indicator.vue  json-value-dialog.vue  markdown-render.vue  model-picker.vue  path-breadcrumb.vue  shortcuts-help-dialog.vue  tool-bar.vue
src/composables/: agentRuntime.ts  connectionConfig.ts  index.ts  useAgentContext.ts  useAppUpdater.ts  useChatAgent.ts  useDataStudioAgent.ts  useDataStudioChatAgent.ts  useDialogResult.ts  useDialogService.ts  useEditorInsertCode.ts  useFormValidation.ts  useGlobalShortcuts.ts  useKeyboardShortcuts.ts  useLoadingBarService.ts  useMessageService.ts  useSidebarChatAgent.ts
src/config/: index.ts
src/datasources/: ApiClients.ts  agentApi.ts  authService.ts  capabilityInvoker.ts  chatBotApi.ts  dynamoApi.ts  esApi.ts  esDocsBrowse.ts  fetchApi.ts  index.ts  mongoApi.ts  sourceFileApi.ts  storeApi.ts
src/electron/: chatBotApi.ts  fetchApi.ts  main.ts  menu.ts  preload.ts  renderer.ts  sourceFIleApi.ts  storeApi.ts
src/lang/: enUS.ts  index.ts  zhCN.ts
src/layout/: index.vue
src/router/: basic.ts  guards.ts  index.ts
src/store/: appStore.ts  backupRestoreStore.ts  chatStore.ts  clusterManageStore.ts  codeActionStore.ts  connectionStore.ts  dataStudioStore.ts  dbDataStore.ts  dynamoManageStore.ts  exportStore.ts  fileStore.ts  historyStore.ts  importExportStore.ts  index.ts  panelStore.ts  sourceFileStore.ts  sshProfileStore.ts  tabStore.ts  userStore.ts
src/styles/: theme.scss
src/types/: chat.ts  form.ts  index.ts
src/utils/: debounce-throttle.ts  index.ts  mittBus.ts
tests/: connectionStore.test.ts  featureFlags.test.ts  historyStore.test.ts  index.test.ts  mongoApi.test.ts  mongodbConnection.test.ts  tabStore.test.ts
tests/common/: connectQuery.test.ts  csv.test.ts  jsonify.test.ts  requestUtil.test.ts  (+1 more)
(+311 files in other folders)
