[package]
name = "dockit"
version = "0.0.0"
description = "Agentic desktop GUI client for Elasticsearch, OpenSearch, DynamoDB, MongoDB and EasySearch. Query with natural language."
authors = ["geekfun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-store = "2.4.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

tauri-plugin-deep-link = "2"
tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", rev = "afb2b7fe50f337500937eb946c1204a728353b63" }
url = "2"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
tokio = { version = "1", features = ["full"] }
http = "1.4.0"
log = "0.4.29"
futures = "0.3.31"
aws-config = { version = "1.8.16", default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-dynamodb = { version = "1.111.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudwatch = { version = "1.110.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1.103.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ssooidc = { version = "1.100.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sso = { version = "1.98.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
base64 = "0.22.1"
mongodb = "3.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
rand = "0.8"
data-studio-agent = { git = "https://github.com/geek-fun/data-studio-agent", tag = "v0.1.4" }
portpicker = "0.1.1"
pageant = "0.2"
russh = "0.60"

[dev-dependencies]
wiremock = "0.6"
mockall = "0.13"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
